# xlib-comp-wm

./: CMakeLists.txt
app/: CMakeLists.txt
app/test/: CMakeLists.txt  main.cpp
window_manager/: CMakeLists.txt  test.cpp  test.hpp  window_manager.cpp  window_manager.hpp
